changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Rename object_free() to object_free_drop_inventory() to hint about
possible side-effects.
Andreas Kirschbaum 2010-03-08

Properly distinguish between text and binary files.
Andreas Kirschbaum 2010-03-07

Correctly reset los when mapsize changes.
 socket/request.c
Nicolas Weeger 2010-03-07

Load regions before trying to load the initial map.
 common/init.c
Nicolas Weeger 2010-03-07

Fix crash when plugin removed dropped item.
 server/c_object.c
Nicolas Weeger 2010-03-07

Misc Win32 fixes.
Nicolas Weeger 2010-03-06

Fix possible segmentation fault when shutting down the server.
Andreas Kirschbaum 2010-03-04

Don't call server functions directly from plugins.
Nicolas Weeger 2010-02-28

Make object_dump() and get_ob_diff() use const object*.
Nicolas Weeger 2010-02-28

CRE: display archetype information.
Nicolas Weeger 2010-02-28

CRE: try the object name if archetype isn't found for artifact display.
Nicolas Weeger 2010-02-28

CRE: display 'yes' and 'no' sub lists.
Nicolas Weeger 2010-02-28

Only consider items of the right knowledge type, to avoid dumb crashes.
Nicolas Weeger 2010-02-28

Correctly handle NONE subtreasure list in treasure list.
Nicolas Weeger 2010-02-28

Simplify code.
Nicolas Weeger 2010-02-28

Extract 'remove_depletion' function from potion. Give access to plugins to it,
add to Python wrappers.
Nicolas Weeger 2010-02-28

Use ARCH_DEPLETION instead of hardcoding the value.
Nicolas Weeger 2010-02-28

Rewrite spellpath_msg() to use stringbuffer.
Nicolas Weeger 2010-02-13

Fix memory leak.
Nicolas Weeger 2010-02-13
